	the key string following the prefix from a string including
	newlines.

	* twittering-mode.el (twittering-format-status): remove a
	newline as a separator of tweets.
	(twittering-render-timeline): insert a newline as a separator of
	tweets.

	* twittering-mode.el (twittering-format-status): add new format
	specifier "%T", which is converted to the raw text.

2010-01-12  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* test/run-test.sh (exit_status): add 'emacs' command to test
	target emacsen

2010-01-12  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-format-status): fill the text
	with strings following "%t".

2010-01-12  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* test/test-twittering-mode.el (test-icon-mode): removed use of
	twittering-tmp-dir

2010-01-12  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-start-http-session): Call
	`twittering-find-curl-program' only when `twittering-use-ssl' is
	non-nil.

	* twittering-mode.el (twittering-wget-buffer): Delete function.
	(twittering-wget-buffer): Delete variable.

2010-01-11  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-convert-program): initialize
	without confirming whether `convert' comes from ImageMagick.
	(twittering-mode-init-variables): confirm whether the found
	`convert' is a part of ImageMagick or GraphicsMagick if
	`twittering-use-convert' is non-nil. If the program does not come
	from ImageMagick or GraphicsMagick, `twittering-use-convert' is
	changed into nil.

2010-01-10  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el (twittering-convert-program): checks whether
	'convert' is a part of ImageMagick. Windows XP has 'convert.exe'
	in WINDOWS/system32, which is a partition converter.
	(twittering-use-convert): use the value of
	twittering-convert-program

2010-01-11  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-status-format): modify the